Make use of new switch statements to allow cleaning up some of our chained instance of if else statements